# hive

./: .bandit.yml  .dockerignore  .editorconfig  .env.example  .gitattributes  .gitignore  .mcp.json  .python-version  AGENTS.md  AUDIT_TRAIL_TOOL_ISSUE.md  Agent_Development_Guide.md  CHANGELOG.md  CLAUDE.md  CONTAINERIZATION.md  CONTRIBUTING.md  CONTRIBUTION_ROADMAP.md  CONTRIBUTION_SUMMARY.md  CONTRIBUTOR_GUIDE.md  DEPLOYMENT.md  DEVELOPER.md  Dockerfile  Dockerfile.dev  EMAIL_TOOL_IMPLEMENTATION_SUMMARY.md  ENVIRONMENT_SETUP.md  FOUNDER_PITCH.md  ISSUE_4927_CHECKLIST.md  ISSUE_4927_IMPLEMENTATION_PLAN.md  Makefile  Nikshay.ChangesTrail.md  PM_REVIEW_NOTES.md  PR.md  PRE_COMMIT_SETUP.md  PRODUCTION_READY.md  PROJECT_DOCUMENTATION.md  PR_DESCRIPTION.md  PR_DESCRIPTION_MEGA_PACK.md  PR_DESCRIPTION_OBSERVABILITY.md  PR_SUMMARY.md  PULL_REQUEST.md  PullRequestTest  (+89 more)
.claude/: settings.local.json  settings.local.json.example
.cursor/: mcp.json
.devcontainer/: Dockerfile  devcontainer.json
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md  copilot-instructions.md
.idx/: dev.nix
.kilo/: README.md
.kilocode/: README.md  mcp.json
agent-builder-ui/: README.md  index.html  package-lock.json  package.json  server.py
answers/: 00-job-post-answers.md
artifacts/: setup-log.md
cli/: README.md  pyproject.toml
cli/src/hive_cli/: __init__.py  __main__.py
cli/src/hive_cli/commands/: create.py  init.py  list.py  run.py  test.py
core/: .coverage  .gitignore  .mcp.json  CREDENTIALS.md  MCP_BUILDER_TOOLS_GUIDE.md  MCP_INTEGRATION_GUIDE.md  MCP_SERVER_GUIDE.md  README.md  (+19 more)
(+1370 files in other folders)
